# MySimpleLibrary

./: Book.cpp  Book.h  CMakeLists.txt  MediaFile.cpp  MediaFile.h  Movie.cpp  Movie.h  Song.cpp  Song.h  UserInterface.cpp  UserInterface.h  main.cpp
include/: Book.h  MediaFile.h  Movie.h  Song.h  UserInterface.h
src/: Book.cpp  MediaFile.cpp  Movie.cpp  Song.cpp  UserInterface.cpp  main.cpp
